<resources>
    <string name="green_book">Green Book</string>
    <string name="splash">GreenBook</string>
    <string name="in_words">type here (answer in words)</string>
    <string name="type">type here</string>
    <string name="name">type here (start with first name)</string>
    <string name="year">type here (year only)</string>
    <string name="q1">1. The last military head state of Nigeria was?</string>
    <string name="q1_c1">Abdulsaleem Abubaka</string>
    <string name="q1_c2">Sanni Abacha</string>
    <string name="q1_c3">Olusegun Obasanjo</string>
    <string name="q1_c4">Yakubu Gowon</string>
    <string name="q2">2. Africa consist of how many countries?</string>
    <string name="q2_c1">50</string>
    <string name="q2_c2">52</string>
    <string name="q2_c3">54</string>
    <string name="q2_c4">56</string>
    <string name="q3">3. The first Secretary General of Common Wealth was?</string>
    <string name="q3_c1">George Washington</string>
    <string name="q3_c2">Tulma Goldie</string>
    <string name="q3_c3">Arnold Smith</string>
    <string name="q3_c4">Joseph Garba</string>
    <string name="q4">4. The first military coup de’tat and general election in Nigeria was in ________ and ________ respectively.</string>
    <string name="q4_c1">1961</string>
    <string name="q4_c2">1963</string>
    <string name="q4_c3">1966</string>
    <string name="q4_c4">1959</string>
    <string name="q5">5. The Biafra Civil War was between _________ and _________?</string>
    <string name="q5_c1">1967</string>
    <string name="q5_c2">1969</string>
    <string name="q5_c3">1970</string>
    <string name="q5_c4">1972</string>
    <string name="q6">6. What does the eagle in the Nigerian coat of arm represent?</string>
    <string name="q7">7. Nigeria is divided into how many geopolitical zones?</string>
    <string name="q8">8. Who was the first female vice chancellor in Nigerian university?</string>
    <string name="q9">9. When was Nigeria formed?</string>
    <string name="q10">10. Who formed the first political party in Nigeria?</string>
    <string name="submit_answers">Submit</string>
</resources>
